--- a/convert_pdf_to_excel_csv.ipynb
+++ b/convert_pdf_to_excel_csv.ipynb
@@ -57,7 +57,7 @@
    "id": "823b0f40-bb23-4b80-bad3-6e1711b097d3",
    "metadata": {},
    "source": [
-    "File pdf ini didapat dari situs <a href='https://www.cafonline.org/about-us/publications/2019-publications/caf-world-giving-index-10th-edition'>cafonline.org</a>. Tidak semua berkas di dalam pdf tersebut dapat diconvert menjadi excel atau csv, hanya halaman yang berbentuk tabel saja yang bisa. di laporan tersebut tabel laporan keseluruhannya terdapat pada halaman 23 hingga 25. Oleh karena itu proses convert data dari pdf ke excel atau csv kali ini hanya berfokus pada halaman tersebut. Berikut sedikit tampilan tabelnya:<br><br>\n",
+    "Jika ingin mendapat File pdf yang sama, dapat mengunduhnya melalui situs <a href='https://www.cafonline.org/about-us/publications/2019-publications/caf-world-giving-index-10th-edition'>cafonline.org</a>. Tidak semua berkas di dalam pdf tersebut dapat diconvert menjadi excel atau csv, hanya halaman yang berbentuk tabel saja yang bisa. di laporan tersebut tabel laporan keseluruhannya terdapat pada halaman 23 hingga 25. Oleh karena itu proses convert data dari pdf ke excel atau csv kali ini hanya berfokus pada halaman tersebut. Berikut sedikit tampilan tabelnya:<br><br>\n",
     "<img src=\"caf_wgi/caf_wgi.jpg\"></img>"
    ]
   },
